Update schedule to work with 2 db, update swagger
